--- a/HotelManagement/HotelManagement/Views/RoomsView.xaml
+++ b/HotelManagement/HotelManagement/Views/RoomsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HotelManagement.Views.RoomsView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,23 +6,415 @@
              xmlns:local="clr-namespace:HotelManagement.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:HotelManagement.ViewModels"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:UC="clr-namespace:HotelManagement.Resources.UC" x:Class="HotelManagement.Views.RoomsView"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="White"
+             x:Name="Room">
     <UserControl.DataContext>
         <viewModels:RoomsViewModels/>
     </UserControl.DataContext>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction 
+                            Command="{Binding LoadRoomCommand}" 
+                            CommandParameter="{Binding ElementName=Room}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
-        <StackPanel Orientation="Vertical"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-            <materialDesign:PackIcon HorizontalAlignment="Center"
-                                              Foreground="{StaticResource PrimaryDarkBrush}"
-                                              Width="100" Height="100"
-                                              Kind="Home"/>
-            <TextBlock FontSize="40" FontWeight="Bold" 
-                       VerticalAlignment="Center" HorizontalAlignment="Center" 
-                       Foreground="{StaticResource PrimaryDarkBrush}"
-                       Text="{Binding Title}"/>
-        </StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="300"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="100"/>
+                <RowDefinition/>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <TextBlock
+                    Text="Type"
+                    FontSize="15"
+                    FontWeight="SemiBold"
+                    Foreground="Black"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left"
+                    Margin="35,20,0,0"/>
+                <ComboBox
+                    x:Name="cbbType"
+                    materialDesign:HintAssist.Hint="-Select-"
+                    materialDesign:HintAssist.HintOpacity=".50"
+                    IsEditable="False"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left" 
+                    ItemsSource="{Binding ItemsSourceType}"
+                    DisplayMemberPath="name"
+                    Margin="80,20,0,0"/>
+                <TextBlock
+                    Text="Floor"
+                    FontSize="15"
+                    FontWeight="SemiBold"
+                    Foreground="Black"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left"
+                    Margin="160,20,0,0"/>
+                <ComboBox
+                    materialDesign:HintAssist.Hint="-Select-"
+                    materialDesign:HintAssist.HintOpacity=".50"
+                    IsEditable="False"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left" 
+                    Margin="205,20,0,0"
+                    x:Name="cbbFloor"/>
+                <TextBlock
+                    Text="Status"
+                    FontSize="15"
+                    FontWeight="SemiBold"
+                    Foreground="Black"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left"
+                    Margin="280,20,0,0"/>
+                <ComboBox
+                    x:Name="cbbStatus"
+                    materialDesign:HintAssist.Hint="-Select-"
+                    materialDesign:HintAssist.HintOpacity=".50"
+                    IsEditable="False"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left" 
+                    Margin="335,20,0,0">
+                    <ComboBoxItem Content="All"/>
+                    <ComboBoxItem Content="Operational"/>
+                    <ComboBoxItem Content="No Show"/>
+                    <ComboBoxItem Content="Completed"/>
+                    <ComboBoxItem Content="Confirmed"/>
+                    <ComboBoxItem Content="Cancelled"/>
+                    <ComboBoxItem Content="On Request"/>
+                    <ComboBoxItem Content="Available"/>
+                </ComboBox>
+                <Button 
+                    x:Name="btnSearch"
+                    Width="70"
+                    Height="25"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top" 
+                    Content="Search"
+                    Margin="0,20,80,0"
+                    FontSize="12"
+                    Command="{Binding SearchRoomCommand}"
+                    CommandParameter="{Binding ElementName=Room}"/>
+                <Button
+                    x:Name="btnReset"
+                    Width="65"
+                    Height="25"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top" 
+                    Content="Reset"
+                    Margin="0,20,10,0"
+                    FontSize="12"
+                    Command="{Binding ResetSearchCommand}"
+                    CommandParameter="{Binding ElementName=Room}"/>
+                <StackPanel
+                    Orientation="Horizontal"
+                    Width="200"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Margin="10 50 0 0">
+                    <RadioButton
+                        Style="{StaticResource MaterialDesignTabRadioButton}"
+                        Margin="4"
+                        IsChecked="True"
+                        Content="ROOM"
+                        Width="50"
+                        BorderBrush="#FF1F90FF"
+                        Command="{Binding ShowRoomCommand}"
+                        CommandParameter="{Binding ElementName=Room}"/>
+                    <RadioButton
+                        Style="{StaticResource MaterialDesignTabRadioButton}"
+                        Margin="4"
+                        IsChecked="False"
+                        Content="TYPE" 
+                        Width="50"
+                        BorderBrush="#FF1F90FF"
+                        Command="{Binding ShowTypeCommand}"
+                    CommandParameter="{Binding ElementName=Room}"/>
+                </StackPanel>
+                <Button
+                    x:Name="btnAddRoom"
+                    Width="85"
+                    Height="25"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top" 
+                    Content="Add room"
+                    Margin="0,60,36,0"
+                    FontSize="11"
+                    Command="{Binding OpenAddRoomCommand}"
+                    CommandParameter="{Binding ElementName=Room}"/>
+                <Button
+                    x:Name="btnAddType"
+                    Width="85"
+                    Height="25"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top" 
+                    Content="Add type"
+                    Margin="0,60,36,0"
+                    FontSize="11"
+                    Command="{Binding OpenAddTypeCommand}"
+                    CommandParameter="{Binding ElementName=Room}"
+                    Visibility="Hidden"/>
+            </Grid>
+            <Grid Grid.Row="1"
+                  x:Name="grdType">
+                <StackPanel 
+                    Margin="10 0 10 0"
+                    x:Name="stkType" 
+                    >
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Row="1"
+                  x:Name="grdRoom">
+                <WrapPanel 
+                    Margin="10 0 10 0"
+                    x:Name="stkRoom" 
+                    Orientation="Horizontal"/>
+            </Grid>
+            <Grid Grid.Row="2"/>
+        </Grid>
+        <Grid Grid.Column="1">
+            <TextBlock
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
+                Text="ROOM INFOMATION"
+                FontWeight="SemiBold"
+                FontSize="15"
+                Margin="0 25 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Name:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 55 0 0 "/>
+            <TextBlock
+                x:Name="txbNameRoom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="80 55 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Status:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="130 55 0 0 "/>
+            <TextBlock
+                x:Name="txbStatusRoom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="180 55 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Room type:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 80 0 0 "/>
+            <TextBlock
+                x:Name="txbTypeRoom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="180 80 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Price:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 105 0 0 "/>
+            <TextBlock
+                x:Name="txbPriceRoom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="180 105 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Max customer:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 130 0 0 "/>
+            <TextBlock
+                x:Name="txbMaxRoom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="180 130 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Count customer:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 155 0 0 "/>
+            <TextBlock
+                x:Name="txbCountRoom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="180 155 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Note:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 180 0 0 "/>
+            <TextBlock
+                x:Name="txbNoteRoom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="180 180 0 0 "/>
+            <Button
+                x:Name="btnMoreRoom"
+                Style="{StaticResource MaterialDesignFlatLightButton}"
+                ToolTip="More info room"
+                Content="More&gt;&gt;"
+                Width="80"
+                Height="25"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="162,195,0,0"
+                Command="{Binding OpenEditRoomCommand}"
+                CommandParameter="{Binding ElementName=Room}"
+                FontSize="12"/>
+            <TextBlock
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
+                Text="MAIN CUSTOM INFOMATION"
+                FontWeight="SemiBold"
+                FontSize="15"
+                Margin="0 220 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Name:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 250 0 0 "/>
+            <TextBlock
+                x:Name="txbNameCustom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="130 250 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="ID card:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 275 0 0 "/>
+            <TextBlock
+                x:Name="txbIDCustom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="130 275 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Gender:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 300 0 0 "/>
+            <TextBlock
+                x:Name="txbGenderCustom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="130 300 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Phone:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 325 0 0 "/>
+            <TextBlock
+                x:Name="txbPhoneCustom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="130 325 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Email:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 350 0 0 "/>
+            <TextBlock
+                x:Name="txbEmailCustom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="130 350 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Arrival:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30 375 0 0 "/>
+            <TextBlock
+                x:Name="txbArrivalCustom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="130 375 0 0 "/>
+            <TextBlock
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text="Departure:"
+                FontWeight="SemiBold"
+                FontSize="12"
+                Margin="30,400,0,0"/>
+            <TextBlock
+                x:Name="txbDepCustom"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Text=""
+                FontSize="12"
+                Margin="130 400 0 0 "/>
+            <Button
+                Style="{StaticResource MaterialDesignFlatLightButton}"
+                ToolTip="More info custom"
+                Content="More&gt;&gt;"
+                Width="80"
+                Height="25"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="160,415,0,0"
+                FontSize="12"/>
+        </Grid>
     </Grid>
 </UserControl>
